# langchain-langgraph-course

./: .gitignore
agentic-rag/: pyproject.toml
agentic-rag/src/: ingestion.py  main.py
agentic-rag/src/graph/: graph.py  state.py
agentic-rag/src/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
agentic-rag/src/graph/chains/tests/: test_chains.py
agentic-rag/src/graph/nodes/: __init__.py  grade_documents.py  retrieve.py  web_search.py
react-agent/: pyproject.toml
reflection-agent/: chains.py  main.py  pyproject.toml
reflexion-agent/: chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
